tests/fuzzing_samples/results/case_15.err
Traceback (most recent call last):
  File "/root/es/zclass/pesto/tests/fuzzing_samples/case_15.py", line 16, in <module>
    value < 1j
TypeError: '<' not supported between instances of 'int' and 'complex'
